# patina-mtrr

./: .git-blame-ignore-revs  .markdownlint.yml  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  cheatsheet.md  cspell.yml  deny.toml  markdownlint.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: Labels.yml  release-draft-config.yml
.github/ISSUE_TEMPLATE/: config.yml  rfc.yml
.github/workflows/: CiWorkflow.yml  ReleaseWorkflow.yml  ci-workflow.yml  crate-version-update.yml  crate-version-updater.yml  label-issues.yml  label-sync.yml  publish-release.yml  triage-issues.yml  update-release-draft.yml
.github/workflows/label-issues/: file-paths.yml  regex-pull-requests.yml
src/: error.rs  hal.rs  lib.rs  mtrr.rs  structs.rs  utils.rs
src/tests/: config.rs  fixtures.rs  mock_hal.rs  mod.rs  mtrr_tests.rs  support.rs
