[package]
name = "patina_mtrr"
version = "1.0.0"
edition = "2021"
license = "BSD-2-Clause-Patent"
description = "x64 MTRR programming library"
repository = "https://github.com/OpenDevicePartnership/patina-mtrr"
keywords = ["mtrr"]

[dependencies]
bitfield-struct = "0.10"
cfg-if = "1"

[dev-dependencies]
rand = "0.8"

[features]
std = []
doc = []
