[package]
name = "patina_mtrr"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
description = "x64 MTRR programming library"
repository = "https://github.com/OpenDevicePartnership/patina-mtrr"
keywords = ["mtrr"]

[dependencies]
bitfield-struct = "0.10"
cfg-if = "1"

[dev-dependencies]
rand = "0.8"

[features]
std = []
doc = []

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = false
codegen-units = 1
